--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,15 +6,17 @@ phases:
       nodejs: 18
     commands:
       - echo Installing dependencies...
-      - npm ci --legacy-peer-deps
+      - cd saas-landing-page-main
+      - npm install --legacy-peer-deps
 
   build:
     commands:
       - echo Building the React app...
+      - cd saas-landing-page-main
       - npm run build
 
 artifacts:
   files:
     - '**/*'
-  base-directory: dist
+  base-directory: saas-landing-page-main/dist
   discard-paths: no
