--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,11 +6,15 @@ phases:
       nodejs: 18
     commands:
       - echo Installing dependencies...
+      - ls -la
       - cd saas-landing-page-main && npm install --legacy-peer-deps
 
   build:
     commands:
       - echo Building the React app...
+      - pwd
+      - ls -la
+      - find . -name "package.json" -type f
       - cd saas-landing-page-main && npm run build
 
 artifacts:
