Fix artifacts path to saas-landing-page-main/dist

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,5 +16,5 @@ phases:
 artifacts:
   files:
     - '**/*'
-  base-directory: dist
+  base-directory: saas-landing-page-main/dist
   discard-paths: no
